updated color of dot-white in footer

--- a/how_it_works/index.html
+++ b/how_it_works/index.html
@@ -92,7 +92,7 @@
     <!-- Text 2 -->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas non veniam libero, quasi pariatur aliquam dolore provident optio nam quidem, amet ut tempore quisquam sapiente. Quasi nesciunt perferendis dolor.</p>
     
-    <!-- Card 1 -->
+    <!-- Card 2 -->
     <p>Get Paid Sooner</p>
     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
     <p>Lorem Ipsum has been the industry's standard dummy text ever since</p>
@@ -119,9 +119,9 @@
                 <div class="row">
                     <div class="col-12 align-self-center">
                         <p id="text-small-top-section"><span>Free 14 day trial</span>
-                            &nbsp&nbsp<span class="dot-blue"></span>
+                            &nbsp&nbsp<span class="dot-white"></span>
                             &nbsp&nbsp<span>Manage Customers in Minutes</span>
-                            &nbsp&nbsp<span class="dot-blue"></span>
+                            &nbsp&nbsp<span class="dot-white"></span>
                             &nbsp&nbsp<span>Cancel at Anytime</span></p>
                     </div>
                 </div>
