--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -5,14 +5,98 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="Description" content="Enter your description here"/>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="./css/main.css">
-<title>Title</title>
+<title>Landing Page</title>
 </head>
 <body>
+    <!--info above boxes-->
+        <div class="explore">
+            <br>
+            <br>
+            <h3><center>Start to Exlpore Double Tap</center</h3>
+                <h5><center>A new and better way for small business to manage their customer base, payments 
+                    and keep track of internal tasks</center></h5>   
+                <br>
+                <br>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
+        </div> 
+    <!--4 small boxes in body-->
+    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm">
+                <button id="payments-image"><img src="">Payments</button>
+            </div>
+            <div class="col-sm">    
+                <button id="retain-image"><img src="images/retain.png"> Retain</button>
+            </div>
+            <div class="col-sm"> 
+                <button id= "reporting-image"><img src="./images/reporting.png">Reporting</button>
+            </div>
+            <div class="col-sm">
+                <button id="convert-image"><img src="./images/Convert.png">Convert</button>
+            </div> 
+        </div>
+    </div>
+
+    <!--card section-->
+
+    <div class="card" style="width:70%; height:40%">
+        <img class="card-img-left" src="./images/credit-card.png" style="height:300px;width:600px;" alt="guy with card">
+        <div class="card_body">
+            <h4 class="card_title">Start accepting payments with Ease</h4>
+            <h5 class="card_subtitle">Deliver the world of payment options and seamless checkout experiences, making it wasy for your customers to pay you for your products and services</h5>
+            <ul>
+                <li>Accept credit & debit cards, Paypal, ACH, Apple pay and more with the flick of a switch</li>
+                <li>Process transactions in up to 32 different currencies</li>
+                <li>Integrate with popular payment gateways like Stripe and Braintree</li>
+                <li>Select from a variety of different checkout options and experiences</li>
+            </ul>
+        <div id="card_button">
+            <button type="submit">Learn More</button>
+        </div>
+        </div>
+    </div>
+<!--solutions section-->
+
+        <div class="needs">
+            <h3><center>Solutions to fit your Business Needs</center></h3>
+            <br>
+            <br>
+            <br>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                    <p>Email Dashboards</p>
+                    <p>Automate client responses, and keep track of any communication your team has with a client.</p>
+                    <button type="submit">Learn More</button>
+                </div>
+                <div class="col"> 
+                    <p>Task Management</p>
+                    <p>Automate client responses, and keep track of any communication your team has with a client.</p>   
+                    <button type="submit">Learn More</button>
+                </div>
+                <div class="col"> 
+                    <p>Analytics</p>
+                    <p>Automate client responses, and keep track of any communication your team has with a client.</p>   
+                    <button type="submit">Learn More</button>
+                </div>
+                <div class="col"> 
+                    <p>Project Calendars</p>
+                    <p>Automate client responses, and keep track of any communication your team has with a client.</p>   
+                    <button type="submit">Learn More</button>
+                </div>
+            </div>
+        </div>
+
+
+    
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/js/bootstrap.min.js"></script>
 </body>
 </html>
