added some responsiveness to how it works page

--- a/how_it_works/index.html
+++ b/how_it_works/index.html
@@ -11,10 +11,10 @@
 <title>How It Works</title>
 </head>
 <body>
-    <div class="container header-nav">
+    <div class="container-fluid header-nav">
     <!-- Header Nav -->
         <div class="row align-items-center">
-            <div class="col">
+            <div class="col-2">
                 <span><a href="#"><img src="./img/Logo.png" class="img-logo-header-nav"></a></span>
             </div>
             <div class="col">
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
     <!-- Top Section -->
         <div class="row row-top-section">
             <div class="col-8">
@@ -73,7 +73,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4">
+            <!-- Responsive:  Hides image on screens smaller than medium -->
+            <div class="col-4 d-none d-md-block">
                 <img src="./img/Header-Side.png" id="img-top-right">
             </div>
         </div>
@@ -101,7 +102,7 @@
     <p>but also the leap into electronic typesetting, remaining essentially</p>
     <p>unchanged.</p>
 
-    <div class="container text-center">
+    <div class="container-fluid text-center">
     <!-- Footer -->
         <div class="row row-footer">
             <div class="col-12">
