updated how it works

--- a/how_it_works/index.html
+++ b/how_it_works/index.html
@@ -81,26 +81,46 @@
     </div>
     
     <!-- Text 1 -->
-    <p>How It Works</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas non veniam libero, quasi pariatur aliquam dolore provident optio nam quidem, amet ut tempore quisquam sapiente. Quasi nesciunt perferendis dolor.</p>
-
+    <div class="intro">
+    <center><p>How It Works</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas non veniam libero, quasi pariatur aliquam dolore provident optio nam quidem, amet ut tempore quisquam sapiente. Quasi nesciunt perferendis dolor.</p></center>
+    </div>
     <!-- Card 1 -->
-    <p>Collect Useful Info</p>
-    <p>Deliver the world of payment options and seamless checkout</p>
-    <p>experiences, making it easy for your customers to pay you for your</p>
-    <p>products and services.</p>
+
+    <div class="card" style="width:58%; height:40%">
+        <img class="card-img-left" src="./img/Collect-info.png" >
+        <div class="card_body">
+            <br>
+            <br>
+            <center><h4 class="card_title">Collect Useful Info</h4></center>
+            <br>
+            <br>
+            <class="card_subtitle">Deliver the world of payment options and seamless checkout
+                <p>experiences, making it easy for your customers to pay you for your
+                products and services.
+        </div>
+    </div>
+
 
     <!-- Text 2 -->
+    <div class="intro">
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas non veniam libero, quasi pariatur aliquam dolore provident optio nam quidem, amet ut tempore quisquam sapiente. Quasi nesciunt perferendis dolor.</p>
+    </div>
+
     
     <!-- Card 2 -->
-    <p>Get Paid Sooner</p>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-    <p>Lorem Ipsum has been the industry's standard dummy text ever since</p>
-    <p>the 1500s, when an unknown printer took a gallery of type and scrambled</p>
-    <p>it to make a type specimen book.  It has survived not only five centuries</p>
-    <p>but also the leap into electronic typesetting, remaining essentially</p>
-    <p>unchanged.</p>
+    <div class="card_2" style="width:58%; height:40%">
+        <img class="card-img-left" src="./img/Take Payments.png" style="height:20%;">
+        <div class="card_body">
+            <class="card_subtitle"><center><p>Get Paid Sooner</p></center>
+            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since
+            the 1500s, when an unknown printer took a gallery of type and scrambled
+            it to make a type specimen book.  It has survived not only five centuries
+            but also the leap into electronic typesetting, remaining essentially
+            unchanged.
+    </div>
+        </div>
 
     <div class="container-fluid text-center">
     <!-- Footer -->
