--- a/sign_in_page/index.html
+++ b/sign_in_page/index.html
@@ -8,23 +8,23 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="./css/main.css">
-<title>Title</title>
+<title>Sign In</title>
 </head>
 <body>
     <div class="grid-container1">
         <div class="grid-item grid-item-1">
             <h2 class="firsth2">Don't Have an Account Yet?</h2>
             <h2>What are you waiting for? Let's Fix that now!</h2>
-            <button class="button1">Sign Up</button>
+            <button class="button1"><a href="../sign_up_page/index.html">Sign Up</a></button>
             <br>
             <img class="signin" src="img/Group 15.png" alt="">
         </div>
         <div class="grid-item grid-item-2">
             <form action="">
                 <h1>Sign In</h1>
-                <input class="symbol1" type="text" name="username" id="username"><br>
-                <input class="symbol2" type="text" name="email" id="email"><br>
-                <input class="symbol3" type="text" name="password" id="password"><br>
+                <input class="symbol1" type="text" name="username" id="username" required><br>
+                <input class="symbol2" type="email" name="email" id="email" required><br>
+                <input class="symbol3" type="password" name="password" id="password" required><br>
                 <button class="button2">Sign In</button>
                 <p><Strong>Or Sign in with social platforms</Strong></p>
             </form>
