--- a/how_it_works/index.html
+++ b/how_it_works/index.html
@@ -33,7 +33,7 @@
                 <span><a href="#">Support</a></span>
             </div>
             <div class="col">
-                <span><a href="#"><button type="button" class="btn btn-outline-primary">Sign In</button></a></span>
+                <span><a href="../sign_in_page/index.html"><button type="button" class="btn btn-outline-primary">Sign In</button></a></span>
             </div>
             <div class="col">            
                 <span><a href="#"><button type="button" class="btn btn-primary">Try It Free</button></a></span>
@@ -81,6 +81,10 @@
     </div>
     
     <!-- Text 1 -->
+    <br>
+    <hr>
+    <br>
+    <br>
     <div class="intro">
     <center><p>How It Works</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor voluptas non veniam libero, quasi pariatur aliquam dolore provident optio nam quidem, amet ut tempore quisquam sapiente. Quasi nesciunt perferendis dolor.</p></center>
@@ -98,6 +102,7 @@
             <class="card_subtitle">Deliver the world of payment options and seamless checkout
                 <p>experiences, making it easy for your customers to pay you for your
                 products and services.
+            </class>
         </div>
     </div>
 
@@ -109,18 +114,18 @@
 
     
     <!-- Card 2 -->
-    <div class="card_2" style="width:58%; height:40%">
-        <img class="card-img-left" src="./img/Take Payments.png" style="height:20%;">
-        <div class="card_body">
-            <class="card_subtitle"><center><p>Get Paid Sooner</p></center>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since
-            the 1500s, when an unknown printer took a gallery of type and scrambled
-            it to make a type specimen book.  It has survived not only five centuries
-            but also the leap into electronic typesetting, remaining essentially
-            unchanged.
-    </div>
+    <div class="card" style="width:58%; height:30%">
+        <img class="card-img-left" src="./img/Take Payments.png" style="width:40%">
+        <div class="card_paid">
+            <br>
+            <br>
+            <center><h4 class="card_title">Get Paid Sooner</h4></center>
+            <br>
+            <br>
+            <class="card_subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500's, when an unknown printer took a galley of type and scrambled it to make a type speciman book. It has survived not only 5 centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            </class>
         </div>
+    </div>
 
     <div class="container-fluid text-center">
     <!-- Footer -->
