Added links to sign up buttons and sign in buttons on ladning page and how it works page

--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -54,14 +54,14 @@
                 <div class="row">
                     <div class="col-8">
                         <p>
-                            <span><a href="#"><button type="button" class="btn btn-primary">Sign Up Free</button></a></span>
+                            <span><a href="../sign_up_page/index.html"><button type="button" class="btn btn-primary">Sign Up Free</button></a></span>
                             <span><a href="#"><button type="button" class="btn btn-outline-primary">Chat With Us</button></a></span>
                         </p>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-8">
-                        <p><span>Already Using <b>Double</b>Tap?</span>&nbsp<span><b><a href="#">Sign In</a></b></span></p>
+                        <p><span>Already Using <b>Double</b>Tap?</span>&nbsp<span><b><a href="../sign_in_page/index.html">Sign In</a></b></span></p>
                     </div>
                 </div>
                 <div class="row">
